--- a/SMPv2/app/src/main/res/menu/menu_business.xml
+++ b/SMPv2/app/src/main/res/menu/menu_business.xml
@@ -7,4 +7,7 @@
     <item
         android:id="@+id/analytics"
         android:title="Analytics" />
+    <item
+        android:id="@+id/settings"
+        android:title="Settings" />
 </menu>
