Overhauled points to use tiers

--- a/SMPv2/app/src/main/res/layout/list_userpoints.xml
+++ b/SMPv2/app/src/main/res/layout/list_userpoints.xml
@@ -9,5 +9,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+
+    <LinearLayout
+        android:layout_width="300dp"
+        android:layout_height="20dp"
+        android:orientation="horizontal">
+        <TextView
+            android:id = "@+id/curTier"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+        <TextView
+            android:id = "@+id/nextTier"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <SeekBar
+        android:id="@+id/tierProgress"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp" />
+
     
 </LinearLayout>
