--- a/SMPv2/app/src/main/res/layout/add_promotion_dialogue.xml
+++ b/SMPv2/app/src/main/res/layout/add_promotion_dialogue.xml
@@ -19,12 +19,22 @@
         android:ems="10"
         android:hint="Detailed description of your promotion (OPTIONAL)" />
 
-    <EditText
-        android:id="@+id/editTextPromotionPoints"
-        android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
-        android:hint="@string/add_promotion_points">
-    </EditText>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/minimum_tier_for_promo"/>
+        <Spinner
+            android:id="@+id/minTier"
+            android:paddingStart="10dp"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+        </Spinner>
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/promoImageView"
