--- a/SMPv2/app/src/main/res/layout/add_promotion_dialogue.xml
+++ b/SMPv2/app/src/main/res/layout/add_promotion_dialogue.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <EditText
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/minimum_tier_for_promo"/>
