Implemented logout functionality

--- a/SMPv2/app/src/main/res/menu/menu_main.xml
+++ b/SMPv2/app/src/main/res/menu/menu_main.xml
@@ -14,4 +14,7 @@
     <item android:title="Settings"
         android:id="@+id/settings"
         />
+    <item android:title="Log Out"
+        android:id="@+id/logOut"
+        />
 </menu>
