--- a/SMPv2/app/src/main/res/menu/menu_business.xml
+++ b/SMPv2/app/src/main/res/menu/menu_business.xml
@@ -10,4 +10,6 @@
     <item
         android:id="@+id/settings"
         android:title="Settings" />
+    <item android:title="Log Out"
+        android:id="@+id/logOut" />
 </menu>
