oncomplete null check fix, misc updates

--- a/SMPv2/app/src/main/res/values/colors.xml
+++ b/SMPv2/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="buttonColor">#2EDAEF</color>
     <color name="red">#FF0000</color>
     <color name="blue">#0000FF</color>
+    <color name="defaultButtonColor">#00CED1</color>
 
 </resources>
