promotion images, detailed promotion page, lots of bug fixes and changes, detailed description added, etc

--- a/SMPv2/app/src/main/res/layout/list_promotions.xml
+++ b/SMPv2/app/src/main/res/layout/list_promotions.xml
@@ -22,7 +22,7 @@ android:layout_height="match_parent">
             android:layout_height="match_parent" />
 
         <TextView
-            android:id = "@+id/promotionDetails"
+            android:id="@+id/shortPromotionDetails"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
