Added admin settings activity

--- a/SMPv2/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/SMPv2/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -4,8 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdministratorDashboard"
+    tools:context=".AdminDashboardActivity"
     android:orientation="vertical">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="9dp"
+        tools:layout_editor_absoluteY="0dp" />
 
     <Button
         android:id="@+id/emailKPIbtn"
