--- a/SMPv2/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/SMPv2/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -25,7 +25,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_rounded"
-            android:text="@string/send_email_title"></Button>
+            android:text="@string/send_email_title"
+            android:onClick="onSendKPIBtnClick"></Button>
 
         <CheckBox
             android:id="@+id/kpiCheckbox"
