--- a/SMPv2/app/src/main/res/layout/list_beacons.xml
+++ b/SMPv2/app/src/main/res/layout/list_beacons.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:id = "@+id/promotionBusinessName"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:id="@+id/beaconName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 
     <TextView
-        android:id="@+id/shortPromotionDetails"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <TextView
-        android:id= "@+id/promotionMinimumPoints"
+        android:id="@+id/beaconMinor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/beaconMajor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
