--- a/SMPv2/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/SMPv2/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -14,6 +14,15 @@
         android:layout_height="wrap_content"
         tools:layout_editor_absoluteX="9dp"
         tools:layout_editor_absoluteY="0dp" />
+    <SearchView
+        android:id="@+id/searchView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:queryHint="Search..."
+        android:iconifiedByDefault="false">
+
+    </SearchView>
+
 
 
     <LinearLayout
