Auto stash before merge of "master" and "origin/master"

--- a/SMPv2/app/src/main/res/values/colors.xml
+++ b/SMPv2/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="red">#FF0000</color>
     <color name="blue">#0000FF</color>
     <color name="defaultButtonColor">#00CED1</color>
+    <color name="selectedColor">#C0C0C0</color>
 
 </resources>
