--- a/SMPv2/app/src/main/res/layout/activity_business_dashboard.xml
+++ b/SMPv2/app/src/main/res/layout/activity_business_dashboard.xml
@@ -78,7 +78,8 @@ android:gravity="center"
     <ListView
         android:id="@+id/lvBusinessPromotions"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:listSelector="@color/selectedColor">
     </ListView>
 
 
