--- a/SMPv2/app/src/main/res/layout/activity_signup.xml
+++ b/SMPv2/app/src/main/res/layout/activity_signup.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="130dp"
         android:layout_marginEnd="22dp"
         android:layout_marginBottom="25dp"
-        android:text="Name"
+        android:text="Username"
         app:layout_constraintBottom_toTopOf="@+id/passwordTextView"
         app:layout_constraintEnd_toStartOf="@+id/usernameEditText"
         app:layout_constraintHorizontal_bias="1.0"
