--- a/SMPv2/app/src/main/res/layout/activity_business_beacon_details.xml
+++ b/SMPv2/app/src/main/res/layout/activity_business_beacon_details.xml
@@ -26,5 +26,17 @@
         android:id="@+id/beaconListView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <Button
+        android:id="@+id/submitBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="120dp"
+        android:text="Update"
+        android:onClick="updateRegion"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/confirmEditText" />
+
 
 </LinearLayout>
