Fixing promotions adaptor and hid profile

--- a/SMPv2/app/src/main/res/menu/menu_main.xml
+++ b/SMPv2/app/src/main/res/menu/menu_main.xml
@@ -8,9 +8,9 @@
     <item android:title="View Points"
         android:id="@+id/viewPoints"
         />
-    <item android:title="Profile"
+    <!--<item android:title="Profile"
         android:id="@+id/profile"
-        />
+        />-->
     <item android:title="Settings"
         android:id="@+id/settings"
         />
