--- a/SMPv2/app/src/main/res/layout/activity_business_beacon_details.xml
+++ b/SMPv2/app/src/main/res/layout/activity_business_beacon_details.xml
@@ -17,10 +17,21 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"/>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+    <TextView
+        android:id="@+id/businessRegionTextView"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"/>
+
     <EditText
         android:id="@+id/businessRegionEditText"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:maxLength = "36"/>
+    </LinearLayout>
 
     <ListView
         android:id="@+id/beaconListView"
