--- a/SMPv2/app/src/main/res/layout/activity_analytics.xml
+++ b/SMPv2/app/src/main/res/layout/activity_analytics.xml
@@ -20,6 +20,7 @@
         android:id="@+id/pieChart"
         android:layout_width="400dp"
         android:layout_height="500dp"
+        android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
@@ -31,9 +32,10 @@
         android:id="@+id/lineChart"
         android:layout_width="400dp"
         android:layout_height="500dp"
+        android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="60dp"
         android:visibility="gone">
 
     </com.github.mikephil.charting.charts.LineChart>
@@ -43,6 +45,7 @@
         android:id="@+id/barchart"
         android:layout_width="400dp"
         android:layout_height="500dp"
+        android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="80dp"
