--- a/SMPv2/app/src/main/res/layout/list_promotions.xml
+++ b/SMPv2/app/src/main/res/layout/list_promotions.xml
@@ -14,24 +14,36 @@ android:layout_height="match_parent">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp">
 
         <TextView
             android:id = "@+id/promotionBusinessName"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:fontFamily="@font/theboldfont"
+            android:textSize="18sp"
+            android:layout_marginBottom="10dp"/>
 
         <TextView
             android:id="@+id/shortPromotionDetails"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:fontFamily="@font/champagnebold"
+            android:layout_marginBottom="10dp"/>
 
         <TextView
             android:id= "@+id/promotionMinimumPoints"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/champagnebold"
+            android:textSize="16sp"/>
 
     </LinearLayout>
+    
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="10dp" />
 
 
 </LinearLayout>
