--- a/SMPv2/app/src/main/res/layout/toolbar_main.xml
+++ b/SMPv2/app/src/main/res/layout/toolbar_main.xml
@@ -2,5 +2,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="?attr/colorPrimary"
-    app:titleTextColor="@android:color/white" />
+    android:background="@color/darkBlue"
+    app:titleTextColor="@android:color/white"
+    android:fontFamily="@font/theboldfont"/>
