--- a/SMPv2/app/src/main/res/values/colors.xml
+++ b/SMPv2/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="blue">#0000FF</color>
     <color name="defaultButtonColor">#00CED1</color>
     <color name="selectedColor">#C0C0C0</color>
+    <color name="darkBlue">#2B547E</color>
 
 </resources>
