oliver bug fixes johns help

--- a/SMPv2/app/src/main/res/layout/activity_analytics.xml
+++ b/SMPv2/app/src/main/res/layout/activity_analytics.xml
@@ -7,15 +7,13 @@
     tools:context=".Analytics"
     android:screenOrientation="portrait">
 
-    <android.support.v7.widget.Toolbar
+    <include
         android:id="@+id/toolbar"
+        layout="@layout/toolbar_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        app:titleTextColor="@android:color/white">
-
-    </android.support.v7.widget.Toolbar>
+        tools:layout_editor_absoluteX="9dp"
+        tools:layout_editor_absoluteY="0dp" />
 
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/pieChart"
