--- a/SMPv2/app/src/main/res/layout/list_userpoints.xml
+++ b/SMPv2/app/src/main/res/layout/list_userpoints.xml
@@ -27,11 +27,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/pointsTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+
+
     </LinearLayout>
 
     <ProgressBar
@@ -42,6 +39,13 @@
         android:layout_marginTop="0dp"
         android:layout_marginEnd="0dp" />
 
+    <TextView
+        android:id="@+id/pointsTextView"
+        android:textStyle="bold"
+        android:layout_gravity="right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 
     
 </LinearLayout>
