ui done besides logo

--- a/SMPv2/app/src/main/res/layout/activity_admin_settings.xml
+++ b/SMPv2/app/src/main/res/layout/activity_admin_settings.xml
@@ -22,6 +22,8 @@
         android:layout_marginTop="80dp"
         android:layout_marginEnd="198dp"
         android:text="Settings"
+        android:textSize="18sp"
+        android:fontFamily="@font/theboldfont"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,6 +37,8 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="152dp"
         android:layout_toStartOf="@+id/logoImageView"
+        android:fontFamily="@font/champagnebold"
+        android:textSize="16sp"
         android:text="Password"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
@@ -46,6 +50,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="27dp"
         android:text="Confirm Password"
+        android:textSize="16sp"
+        android:fontFamily="@font/champagnebold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />
 
@@ -77,21 +83,28 @@
         android:id="@+id/monthlyKPI"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/champagnebold"
         android:text="Monthly KPI Email"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/confirmEditText" />
 
     <Button
         android:id="@+id/submitBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="64dp"
         android:layout_marginEnd="120dp"
-        android:text="Update"
+        android:background="@drawable/btn_rounded"
+        android:fontFamily="@font/theboldfont"
         android:onClick="updateSettings"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="Update"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.84"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/confirmEditText" />
 
 
