--- a/SMPv2/app/src/main/res/layout/activity_business_settings.xml
+++ b/SMPv2/app/src/main/res/layout/activity_business_settings.xml
@@ -23,6 +23,7 @@
         android:layout_marginEnd="198dp"
         android:text="Settings"
         android:fontFamily="@font/theboldfont"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,6 +37,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="152dp"
         android:layout_toStartOf="@+id/logoImageView"
+        android:textSize="16sp"
         android:text="Password"
         android:fontFamily="@font/champagnebold"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,6 +49,7 @@
         android:layout_height="43dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="27dp"
+        android:textSize="16sp"
         android:text="Confirm Password"
         android:fontFamily="@font/champagnebold"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,6 +88,7 @@
         android:layout_marginTop="28dp"
         android:fontFamily="@font/theboldfont"
         android:text="Point Accumulation Options"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.478"
         app:layout_constraintStart_toStartOf="parent"
