--- a/SMPv2/app/src/main/res/layout/activity_dashboard.xml
+++ b/SMPv2/app/src/main/res/layout/activity_dashboard.xml
@@ -19,9 +19,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:queryHint="Search..."
-        android:iconifiedByDefault="false">
-
+        android:iconifiedByDefault="false"
+        android:layout_marginBottom="10dp">
     </SearchView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/theboldfont"
+            android:text="@string/promotion_information"
+            android:textSize="20sp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp" />
+    </LinearLayout>
 
 
     <ListView
