--- a/SMPv2/app/src/main/res/layout/activity_landing.xml
+++ b/SMPv2/app/src/main/res/layout/activity_landing.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBG"
-    tools:context=".LandingActivity"
-    style="@style/font">
+    android:background="@color/defaultButtonColor"
+    tools:context=".LandingActivity">
 
     <Button
         android:id="@+id/signUpButton"
@@ -16,11 +15,12 @@
         android:layout_marginTop="400dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="150dp"
-        android:background="@drawable/button_background"
+        android:background="@drawable/btn_rounded_white"
         android:onClick="onclickSignUp"
         android:text="Sign Up"
-        style="@style/font"
-        android:textSize="16dp"
+        android:textSize="18sp"
+        android:textColor="@color/defaultButtonColor"
+        android:fontFamily="@font/theboldfont"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/loginButton"
@@ -36,11 +36,12 @@
         android:layout_marginTop="400dp"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="150dp"
-        android:background="@drawable/button_background"
+        android:background="@drawable/btn_rounded_white"
         android:onClick="onclickLogin"
         android:text="Login"
-        style="@style/font"
-        android:textSize="16dp"
+        android:textSize="18sp"
+        android:fontFamily="@font/theboldfont"
+        android:textColor="@color/defaultButtonColor"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,8 +74,9 @@
         android:layout_marginEnd="181dp"
         android:layout_marginBottom="50dp"
         android:text="SuperPoints"
+        android:fontFamily="@font/theboldfont"
         android:textColor="@color/white"
-        android:textSize="40sp"
+        android:textSize="45sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/signUpButton"
         app:layout_constraintEnd_toEndOf="parent"
