--- a/SMPv2/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/SMPv2/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -19,16 +19,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:queryHint="Search..."
-        android:iconifiedByDefault="false">
+        android:iconifiedByDefault="false"
+        android:layout_marginBottom="10dp">
 
     </SearchView>
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginBottom="20dp"
+        android:gravity="center">
 
         <Button
             android:id="@+id/emailKPIbtn"
@@ -36,12 +37,28 @@
             android:layout_height="wrap_content"
             android:background="@drawable/btn_rounded"
             android:text="@string/send_email_title"
-            android:onClick="onSendKPIBtnClick"></Button>
+            android:onClick="onSendKPIBtnClick"
+            android:textColor="@color/white"
+            android:fontFamily="@font/theboldfont">
+        </Button>
 
 
     </LinearLayout>
 
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/theboldfont"
+        android:text="@string/admin_business_information"
+        android:textSize="20sp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="10dp" />\
+    </LinearLayout>
     <ListView
         android:id="@+id/businessListView"
         android:layout_width="wrap_content"
