--- a/SMPv2/app/src/main/res/layout/activity_business_beacon_details.xml
+++ b/SMPv2/app/src/main/res/layout/activity_business_beacon_details.xml
@@ -8,23 +8,65 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/businessNameTextView"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"/>
-
-    <TextView
-        android:id="@+id/businessAddressTextView"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"/>
-
-    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/theboldfont"
+        android:text="@string/business_information"
+        android:textSize="20sp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="20dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/business_name"
+            android:fontFamily="@font/champagnebold"
+            android:textSize="16sp"
+            android:layout_marginLeft="5dp"/>
+        <TextView
+            android:id="@+id/businessNameTextView"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:fontFamily="@font/theboldfont"
+            android:textSize="18sp"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="20dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/business_address"
+            android:fontFamily="@font/champagnebold"
+            android:textSize="16sp"
+            android:layout_marginLeft="5dp"/>
+        <TextView
+            android:id="@+id/businessAddressTextView"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:fontFamily="@font/champagnebold"
+            android:textSize="18sp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <TextView
         android:id="@+id/businessRegionTextView"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"/>
+        android:layout_width="wrap_content"
+        android:fontFamily="@font/champagnebold"
+        android:layout_marginLeft="5dp"/>
 
     <EditText
         android:id="@+id/businessRegionEditText"
@@ -33,21 +75,40 @@
         android:maxLength = "36"/>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/submitBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="36dp"
+            android:layout_marginEnd="120dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/btn_rounded"
+            android:fontFamily="@font/theboldfont"
+            android:onClick="updateRegion"
+            android:text="Update"
+            android:textColor="@color/white" />
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/theboldfont"
+        android:text="@string/beacon_information"
+        android:textSize="20sp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"/>
+
     <ListView
         android:id="@+id/beaconListView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-    <Button
-        android:id="@+id/submitBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="120dp"
-        android:text="Update"
-        android:onClick="updateRegion"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/confirmEditText" />
-
 
 </LinearLayout>
