--- a/SMPv2/app/src/main/res/layout/activity_maps.xml
+++ b/SMPv2/app/src/main/res/layout/activity_maps.xml
@@ -34,6 +34,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:visibility="gone"
-        android:src="@drawable/prefer_business_icon"
-        android:layout_margin="16dp" />
+        android:src="@drawable/prefer_business_icon_2"
+        android:layout_margin="16dp"
+        android:backgroundTint="@color/defaultButtonColor"/>
 </RelativeLayout>
