--- a/SMPv2/app/src/main/res/layout/activity_settings.xml
+++ b/SMPv2/app/src/main/res/layout/activity_settings.xml
@@ -19,11 +19,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="161dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="56dp"
         android:layout_marginEnd="198dp"
+        android:fontFamily="@font/theboldfont"
         android:text="Settings"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.196"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
@@ -31,7 +33,7 @@
         android:id="@+id/seekBarPrivacy"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="92dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/pushTextView" />
@@ -40,9 +42,11 @@
         android:id="@+id/pushTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="392dp"
+        android:layout_marginStart="108dp"
+        android:layout_marginTop="312dp"
+        android:fontFamily="@font/theboldfont"
         android:text="Push Notifications"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
@@ -51,10 +55,12 @@
         android:layout_width="68dp"
         android:layout_height="34dp"
         android:layout_alignTop="@+id/usernameEditText"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="152dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="104dp"
         android:layout_toStartOf="@+id/logoImageView"
+        android:fontFamily="@font/champagnebold"
         android:text="Password"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
@@ -62,9 +68,11 @@
         android:id="@+id/textView4"
         android:layout_width="87dp"
         android:layout_height="43dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="27dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/champagnebold"
         android:text="Confirm Password"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />
 
@@ -73,11 +81,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="27dp"
-        android:layout_marginTop="41dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="54dp"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/passwordTextView"
         app:layout_constraintTop_toBottomOf="@+id/settingsTextView" />
 
@@ -85,8 +94,8 @@
         android:id="@+id/confirmEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintStart_toEndOf="@+id/textView4"
@@ -96,10 +105,13 @@
         android:id="@+id/submitBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="120dp"
-        android:text="Change Password"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="144dp"
+        android:background="@drawable/btn_rounded"
+        android:fontFamily="@font/theboldfont"
         android:onClick="updateSettings"
+        android:text="UPDATE"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/confirmEditText" />
 
