--- a/SMPv2/app/src/main/res/layout/list_businesses.xml
+++ b/SMPv2/app/src/main/res/layout/list_businesses.xml
@@ -1,17 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id = "@+id/businessName"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/businessAddress"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="18dp"
+            android:text="@string/business_name"
+            android:layout_marginStart="5dp"
+            android:layout_marginRight="5dp"/>
+
+        <TextView
+            android:id = "@+id/businessName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/theboldfont"
+            android:textSize="18sp"
+            android:layout_marginBottom="10dp"/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/business_address"
+            android:layout_marginStart="5dp"
+            android:layout_marginRight="5dp"/>
+
+        <TextView
+            android:id="@+id/businessAddress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/champagnebold"
+            android:textSize="16sp"
+            android:layout_marginBottom="10dp"/>
+
+    </LinearLayout>
 
 </LinearLayout>
