--- a/SMPv2/app/src/main/res/layout/list_promotions.xml
+++ b/SMPv2/app/src/main/res/layout/list_promotions.xml
@@ -30,6 +30,7 @@ android:layout_height="match_parent">
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fontFamily="@font/champagnebold"
+            android:textSize="16sp"
             android:layout_marginBottom="10dp"/>
 
         <TextView
@@ -40,7 +41,7 @@ android:layout_height="match_parent">
             android:textSize="16sp"/>
 
     </LinearLayout>
-    
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="10dp" />
